# langchain_learn

./: 02_chain.ipynb  03_1_agent_math.ipynb  README.md  note.md  pyproject.toml
note/: 03_model.md  04_chain_structure.md  04_data_connection copy.md  04_data_connection.md  09_搜索.md
practice/: 02_01_llm.ipynb  02_02_chain.ipynb  02_03_02_agent_chat.ipynb  03_01_prompt_template.ipynb  03_02_prompt_template_partial_prompt.ipynb  03_03_prompt_template_example.ipynb  03_04_llm_deep.ipynb  04_01_csv_loader.ipynb  04_02_document_loader.ipynb  09_search.ipynb  records_202312021539.csv
try/: travelife_01.ipynb
